--- a/assets/style/recipe.css
+++ b/assets/style/recipe.css
@@ -1,7 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    font-family: Times, 'Times New Roman', serif;
+    background-color: hsl(352, 19%, 85%);
+    color: #231308;
     margin: 0;
     padding: 0;
     display: flex;
@@ -23,7 +23,7 @@ body {
 h1 {
     font-size: 2em;
     margin: 0 0 20px;
-    color: #444;
+    color: #231308;
 }
 
 .recipe-image {
@@ -35,7 +35,7 @@ h1 {
 
 .section-title {
     font-size: 1.5em;
-    color: #444;
+    color: #231308;
     margin-top: 20px;
     margin-bottom: 10px;
 }
