--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,7 +1,8 @@
 /* Global Styles */
 body {
-    /* font-family: Arial, sans-serif; */
-    font-family: 'Roboto', sans-serif;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 300;
+    font-style: normal;
     background-color: #f8f9fa;
     margin: 0;
     padding: 20px;
